# ChatUp-project

./: .gitignore  README.md  pyproject.toml
chatup/: Dockerfile  requirements.txt
chatup/addFriend/: apps.py  urls.py  views.py
chatup/chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chatup/chat/migrations/: 0001_initial.py  0002_alter_chat_reciever_alter_chat_sender.py  0003_alter_notification_chat_and_more.py  0004_notification_create_by.py  0005_alter_notification_create_by.py  0006_alter_chat_file_alter_chat_message.py  0007_notification_add_friend_notification_comment.py  0008_remove_notification_add_friend_and_more.py  0009_notification_add_friend_notification_comment.py  0010_alter_notification_add_friend_and_more.py  0011_notification_like.py  0012_notification_openchat.py  0013_alter_notification_like.py  0014_alter_notification_like.py  0015_alter_notification_like.py  0016_alter_chat_file_alter_chat_message.py
chatup/chatup/: asgi.py  settings.py  urls.py  wsgi.py
chatup/openChat/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
chatup/openChat/migrations/: 0001_initial.py  0002_openchat_members_alter_openchat_name.py  0003_alter_message_options.py  0004_alter_openchat_created_by.py  0005_alter_message_created_by_alter_openchat_members.py  0006_openchat_group_image.py  0007_alter_openchat_group_image.py  (+4 more)
chatup/post/: admin.py  forms.py  models.py  urls.py  views.py
chatup/searchFriend/: apps.py  tests.py  urls.py  views.py
chatup/user/: admin.py  form.py  models.py  urls.py  views.py
(+56 files in other folders)
