[tool.poetry]
name = "chatup"
version = "0.1.0"
description = ""
authors = ["Chaiwat Klanrueangsaeng <6310682742@cn322>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
async-timeout = "4.0.2"
attrs = "22.2.0"
autobahn = "23.1.2"
automat = "22.10.0"
certifi = "2022.12.7"
cffi = "1.15.1"
channels = "4.0.0"
channels-redis = "4.0.0"
charset-normalizer = "3.0.1"
constantly = "15.1.0"
coverage = "7.1.0"
cryptography = "40.0.1"
daphne = "4.0.0"
django = "4.1.6"
hyperlink = "21.0.0"
idna = "3.4"
incremental = "22.10.0"
msgpack = "1.0.5"
pillow = "9.4.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
pyjwt = "2.6.0"
pyopenssl = "23.1.0"
python-http-client = "3.3.7"
pytz = "2022.7.1"
redis = "4.5.3"
requests = "2.28.2"
sendgrid = "6.9.7"
service-identity = "21.1.0"
six = "1.16.0"
sqlparse = "0.4.3"
starkbank-ecdsa = "2.2.0"
twilio = "7.16.3"
twisted = "22.10.0"
txaio = "23.1.1"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
zope-interface = "6.0"
faker = "^18.3.4"
sympy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
